--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "build": "tsup",
     "dev": "tsup --watch src",
     "build:fix": "esno scripts/postbuild.ts",
-    "play": "npm -C playground run dev",
+    "play": "npm -C playground/react-vite run dev",
     "prepublishOnly": "npm run build",
     "release": "bumpp && npm publish",
     "start": "esno src/index.ts",
@@ -123,6 +123,7 @@
   "dependencies": {
     "@phosphor-icons/core": "^2.1.1",
     "@webfill/import-meta-resolve": "^1.0.0",
+    "estree-walker": "^3.0.3",
     "import-meta-resolve": "^4.1.0",
     "magic-string": "^0.30.10",
     "svgson": "^5.3.1",
@@ -142,7 +143,7 @@
     "rollup": "^4.6.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2",
-    "vite": "^5.0.4",
+    "vite": "^5.2.0",
     "vitest": "^0.34.6",
     "webpack": "^5.89.0"
   }
